deployments/aws/manifest/api/api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  template:
    spec:
      containers:
        - name: api-pod
          # Set an ECR image name
          # e.g. image: <AWS account>.dkr.ecr.ap-northeast-1.amazonaws.com/translatorapp-api:latest
          image: 123456.dkr.ecr.ap-northeast-1.amazonaws.com/translatorapp-api:latest
