deployments/aws/manifest/api/ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # Add a certificate ARN.
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:123456:certificate/...
spec:
  rules:
    # Add a domain.
    - host: api.example.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: envoy-service
              servicePort: 9000
